fix rotated header alignment with spacing

--- a/static/benchmarks/css/table.sass
+++ b/static/benchmarks/css/table.sass
@@ -18,6 +18,20 @@ table.benchmarks
     text-align: left
 
   // header rotation
+  @mixin transform_origin($origin)
+    -webkit-transform-origin: $origin
+    -moz-transform-origin: $origin
+    -o-transform-origin: $origin
+    -ms-transform-origin: $origin
+    transform-origin: $origin
+
+  @mixin rotate($rotation, $translateX, $translateY)
+    -webkit-transform: rotate($rotation) translateX($translateX) translateY($translateY)
+    -moz-transform: rotate($rotation) translateX($translateX) translateY($translateY)
+    -ms-transform: rotate($rotation) translateX($translateX) translateY($translateY)
+    -o-transform: rotate($rotation) translateX($translateX) translateY($translateY)
+    transform: rotate($rotation) translateX($translateX) translateY($translateY)
+
   $rotate_transform_origin: 0px 0px
   $rotate_transform_rotate: 315deg
   $rotate_transform_translateX: -80px
@@ -26,17 +40,8 @@ table.benchmarks
     text-align: left
 
     white-space: nowrap
-    -webkit-transform-origin: $rotate_transform_origin
-    -moz-transform-origin: $rotate_transform_origin
-    -o-transform-origin: $rotate_transform_origin
-    -ms-transform-origin: $rotate_transform_origin
-    transform-origin: $rotate_transform_origin
-
-    -webkit-transform: rotate($rotate_transform_rotate) translateX($rotate_transform_translateX) translateY($rotate_transform_translateY)
-    -moz-transform: rotate($rotate_transform_rotate) translateX($rotate_transform_translateX) translateY($rotate_transform_translateY)
-    -ms-transform: rotate($rotate_transform_rotate) translateX($rotate_transform_translateX) translateY($rotate_transform_translateY)
-    -o-transform: rotate($rotate_transform_rotate) translateX($rotate_transform_translateX) translateY($rotate_transform_translateY)
-    transform: rotate($rotate_transform_rotate) translateX($rotate_transform_translateX) translateY($rotate_transform_translateY)
+    @include transform_origin($rotate_transform_origin)
+    @include rotate($rotate_transform_rotate, $rotate_transform_translateX, $rotate_transform_translateY)
 
     p
       display: inline-block
@@ -65,6 +70,9 @@ table.benchmarks
   tr
     td:nth-child(4), td:nth-child(9), th:nth-child(4), th:nth-child(9)
       border-left: 1em solid white
+
+      &.rotate
+        @include transform_origin(5px 5px)
 
   thead, tbody
     .model
